// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI TUI command > keeps narrow empty workbench output focused on runs before graph state > narrow empty workbench 1`] = `
"Agent Hub | unregistered | no-thread
agent @codex | ctx runtime_injection | iter 0 | risk unknown
[Work] Graph Runs Review Tasks Memory Help

== Runs ==  0
  No runs in the current context.

== Review ==
No current context
  No local review evidence is available yet.

== RoleCalls ==
  none | loop stop terminal | pending 0

== Transcript ==
  No messages in the current context.

tab focus | enter review | : palette | c continue | p command | ? help | x ...
> @codex prompt
"
`;

exports[`CLI TUI command > keeps wide and narrow terminal render snapshots stable > narrow command palette 1`] = `
"Agent Hub | TUI Project | #review
agent @agent | ctx runtime_injection | iter 0/4 | risk unknown
[Work] Graph Runs Review Tasks Memory Help

== Command Palette ==
  Current context
    focus work
    command agent-hub role-calls show call_parent
  Runs
    agent-hub runs show run_1
    agent-hub runs diff run_1 --stat
    agent-hub risks show run_1
  RoleCalls
    agent-hub role-calls show call_parent
  Review
    agent-hub role-calls show call_child
  Memory
    agent-hub memory list --project-id project_1
    agent-hub memory approve <memory-id>
    agent-hub memory reject <memory-id>
  Keys
    : close palette
    p print focused command
    ctrl+j submit composer

tab focus | enter review | : palette | c continue | p command | ?...
> @agent prompt
"
`;

exports[`CLI TUI command > keeps wide and narrow terminal render snapshots stable > wide command palette 1`] = `
"Agent Hub | TUI Project | #review
agent @agent | ctx runtime_injection | iter 0/4 | risk unknown
[Work] Graph Runs Review Tasks Memory Help

== Command Palette ==
  Current context
    focus work
    command agent-hub role-calls show call_parent
  Runs
    agent-hub runs show run_1
    agent-hub runs diff run_1 --stat
    agent-hub risks show run_1
  RoleCalls
    agent-hub role-calls show call_parent
  Review
    agent-hub role-calls show call_child
  Memory
    agent-hub memory list --project-id project_1
    agent-hub memory approve <memory-id>
    agent-hub memory reject <memory-id>
  Keys
    : close palette
    p print focused command
    ctrl+j submit composer

tab focus | enter review | : palette | c continue | p command | ? help | x exit
> @agent prompt
"
`;

exports[`CLI TUI command > renders context-read failures with CLI recovery commands > context read failure recovery 1`] = `
"Agent Hub | project_broken | no-thread
agent @fake | ctx runtime_injection | iter 0 | risk unknown
[Work] Graph Runs Review Tasks Memory Help
! failed to read TUI context: database read failed
! recovery: agent-hub project list
! recovery: agent-hub rooms list --project-id project_broken
! recovery: agent-hub tui --help

== Runs ==  0                                                |  == RoleCalls ==
  No runs in the current context.                            |    none | loop stop terminal | pending 0
                                                             |
== Review ==                                                 |  == Transcript ==
TUI context unavailable                                      |    No messages in the current context.
  The current local context could not be read.               |
  latest failed to read TUI context: database read failed    |
  commands:                                                  |
    agent-hub project list                                   |
    agent-hub rooms list --project-id project_broken         |
    agent-hub tui --help                                     |

tab focus | enter review | : palette | c continue | p command | ? help | x exit
> @fake prompt
"
`;

exports[`CLI TUI command > renders missing registration recovery instead of failing launch > missing registration recovery 1`] = `
"Agent Hub | unregistered | no-thread
agent @fake | ctx runtime_injection | iter 0 | risk unknown
[Work] Graph Runs Review Tasks Memory Help
! project root /tmp/unregistered-tui-project is not registered
! recovery: agent-hub project add --name <name> --root /tmp/unregistered-tui-project

== Runs ==  0                                                |  == RoleCalls ==
  No runs in the current context.                            |    none | loop stop terminal | pending 0
                                                             |
== Review ==                                                 |  == Transcript ==
No current context                                           |    No messages in the current context.
  No local review evidence is available yet.                 |

tab focus | enter review | : palette | c continue | p command | ? help | x exit
> @fake prompt
"
`;
